# agent-deployment-template

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  cookiecutter.json  pyproject.toml
.claude/: settings.json
.github/workflows/: validate-template.yml
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .dockerignore  .env.example  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md
{{cookiecutter.project_slug}}/.github/workflows/: build.yml  ci.yml  cruft-check.yml
{{cookiecutter.project_slug}}/agent/: __main__.py
{{cookiecutter.project_slug}}/deployment/: config.py  deploy.py
{{cookiecutter.project_slug}}/tests/evals/: promptfoo.yaml  run_eval.py
{{cookiecutter.project_slug}}/tests/evals/datasets/skills/: functional.jsonl  safety_injection.jsonl  safety_pii.jsonl  tool_datetime.jsonl  tool_search.jsonl
{{cookiecutter.project_slug}}/tests/integration/: conftest.py  test_agent_runner.py  test_tool_routing.py
{{cookiecutter.project_slug}}/tests/unit/: test_deploy_config.py
